--- a/Crescent Engine/GameEngines4/GameEngines4.vcxproj
+++ b/Crescent Engine/GameEngines4/GameEngines4.vcxproj
@@ -161,6 +161,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Engine\Math\KinematicSteeringOutput.cpp" />
+    <ClCompile Include="Engine\Rendering\2D\imgui\imgui.cpp" />
+    <ClCompile Include="Engine\Rendering\2D\imgui\imgui_demo.cpp" />
+    <ClCompile Include="Engine\Rendering\2D\imgui\imgui_draw.cpp" />
+    <ClCompile Include="Engine\Rendering\2D\imgui\imgui_impl_sdl_gl3.cpp" />
     <ClCompile Include="GAME\TesterClasses\AIComponent.cpp" />
     <ClCompile Include="GAME\TesterClasses\ComponentB.cpp" />
     <ClCompile Include="GAME\TesterClasses\ComponentA.cpp" />
@@ -193,9 +197,17 @@
     <ClCompile Include="Engine\FX\MaterialLoader.cpp" />
     <ClCompile Include="Engine\Core\OctSpatialPartition.cpp" />
     <ClCompile Include="GAME\Scenes\TestAIScene.cpp" />
+    <ClCompile Include="Engine\Math\Trackball.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Math\KinematicSteeringOutput.h" />
+    <ClInclude Include="Engine\Rendering\2D\imgui\imconfig.h" />
+    <ClInclude Include="Engine\Rendering\2D\imgui\imgui.h" />
+    <ClInclude Include="Engine\Rendering\2D\imgui\imgui_impl_sdl_gl3.h" />
+    <ClInclude Include="Engine\Rendering\2D\imgui\imgui_internal.h" />
+    <ClInclude Include="Engine\Rendering\2D\imgui\stb_rect_pack.h" />
+    <ClInclude Include="Engine\Rendering\2D\imgui\stb_textedit.h" />
+    <ClInclude Include="Engine\Rendering\2D\imgui\stb_truetype.h" />
     <ClInclude Include="GAME\TesterClasses\AIComponent.h" />
     <ClInclude Include="GAME\TesterClasses\ComponentB.h" />
     <ClInclude Include="GAME\TesterClasses\ComponentA.h" />
@@ -232,6 +244,7 @@
     <ClInclude Include="GAME\Scenes\TestAIScene.h" />
     <ClInclude Include="Engine\Math\KinematicArrive.h" />
     <ClInclude Include="Engine\Events\KeyEventListener.h" />
+    <ClInclude Include="Engine\Math\Trackball.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Engine\Shaders\ColourFragmentShader.glsl" />
