--- a/Crescent Engine/GameEngines4/GameEngines4.vcxproj
+++ b/Crescent Engine/GameEngines4/GameEngines4.vcxproj
@@ -207,11 +207,11 @@
     <ClCompile Include="Engine\Math\VelocityMatching.cpp" />
     <ClCompile Include="Engine\Math\SteeringOutput.cpp" />
     <ClCompile Include="Engine\Math\SeparationSteering.cpp" />
-    <ClCompile Include="Engine\Rendering\3D\Particle.cpp" />
     <ClCompile Include="Engine\Rendering\3D\ParticleEmitter.cpp" />
     <ClCompile Include="Engine\Math\Randomizer.cpp" />
     <ClCompile Include="Engine\Core\Renderers\OpenGLRenderer.cpp" />
     <ClCompile Include="Engine\Rendering\3D\OpenGLMesh.cpp" />
+    <ClCompile Include="Engine\Rendering\3D\OpenGLParticle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Math\BlendedSteering.h" />
@@ -273,6 +273,7 @@
     <ClInclude Include="Engine\Core\Renderers\Renderer.h" />
     <ClInclude Include="Engine\Core\Renderers\OpenGLRenderer.h" />
     <ClInclude Include="Engine\Rendering\3D\OpenGLMesh.h" />
+    <ClInclude Include="Engine\Rendering\3D\OpenGLParticle.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Engine\Shaders\ColourFragmentShader.glsl" />
