Camera Modifiable Acceleration

--- a/Crescent Engine/GameEngines4/imgui.ini
+++ b/Crescent Engine/GameEngines4/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Hierachy]
-Pos=60,60
+Pos=60,43
 Size=371,611
+Collapsed=0
+
+[Window][Properties Panel]
+Pos=546,225
+Size=307,196
 Collapsed=0
 
